--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <video autoplay muted loop id="bg-video">
+  <video autoplay muted loop id="bg-video" height="100vh" width="100vw">
     <source src="bg.mp4" type="video/mp4">
   </video>
   <section class="home" id="home">
