--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
   <section class="contact" id="contact">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12" data-aos="slide-right">
+        <div class="col-md-12">
           <h1 align="center">Contact Us</h1>
         </div>
-        <div class="col-md-12" data-aos="slide-left">
+        <div class="col-md-12">
           <div class="logo">
             <img src=""></div>
           <form action="" method="post">
@@ -182,7 +182,7 @@
     </div>
   </section>
 
-  <section class="footer" id="footer" data-aos="slide-right">
+  <section class="footer" id="footer">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
